add two more images, center cards

--- a/recipes/output.css
+++ b/recipes/output.css
@@ -546,6 +546,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.flex {
+  display: flex;
+}
+
 .inline-flex {
   display: inline-flex;
 }
@@ -572,6 +576,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .rounded-lg {
